// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogEntries should render with empty timestamp list 1`] = `
<div
  className="LogEntries__Container-sc-ufvf4x-0 fouHxF"
>
  <div
    className="LogEntries__TopRow-sc-ufvf4x-1 bWQZsE"
  >
    <button
      aria-pressed={false}
      className="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
      onClick={[Function]}
    >
      Näytä tietojen käyttökerrat
    </button>
  </div>
</div>
`;

exports[`LogEntries should render with non-empty timestamp list, and toggle expansion of timestamps when link is clicked 1`] = `
<div
  class="LogEntries__Container-sc-ufvf4x-0 fouHxF"
>
  <div
    class="LogEntries__TopRow-sc-ufvf4x-1 bWQZsE"
  >
    <button
      aria-pressed="false"
      class="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
    >
      Näytä tietojen käyttökerrat
    </button>
  </div>
</div>
`;

exports[`LogEntries should render with non-empty timestamp list, and toggle expansion of timestamps when link is clicked 2`] = `
<div
  class="LogEntries__Container-sc-ufvf4x-0 jZPGBf"
>
  <div
    class="LogEntries__TopRow-sc-ufvf4x-1 bWQZsE"
  >
    <button
      aria-pressed="true"
      class="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
    >
      Piilota käyttökerrat
    </button>
    <b
      class="typography__Bold-sc-1yq3b4j-6 woqnG"
    >
      Näytetään käyttökerrat 1–2 / 2
    </b>
  </div>
  <table
    class="DateList__DateTable-sc-9hn0em-0 jxAiqi"
  >
    <tbody>
      <tr>
        <td>
          20.9.2018 16.01
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`LogEntries should render with non-empty timestamp list, and toggle expansion of timestamps when link is clicked 3`] = `
<div
  class="LogEntries__Container-sc-ufvf4x-0 fouHxF"
>
  <div
    class="LogEntries__TopRow-sc-ufvf4x-1 bWQZsE"
  >
    <button
      aria-pressed="false"
      class="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
    >
      Näytä tietojen käyttökerrat
    </button>
  </div>
</div>
`;

exports[`LogEntries should render with timestamp list of over 10 entries, expanding 10 timestamps at a time 1`] = `
<div
  class="LogEntries__Container-sc-ufvf4x-0 jZPGBf"
>
  <div
    class="LogEntries__TopRow-sc-ufvf4x-1 bWQZsE"
  >
    <button
      aria-pressed="true"
      class="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
    >
      Piilota käyttökerrat
    </button>
    <b
      class="typography__Bold-sc-1yq3b4j-6 woqnG"
    >
      Näytetään käyttökerrat 1–10 / 15
    </b>
  </div>
  <table
    class="DateList__DateTable-sc-9hn0em-0 jxAiqi"
  >
    <tbody>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="LogEntries__BottomRow-sc-ufvf4x-2 jsIDKG"
  >
    <button
      class="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
    >
      Näytä lisää käyttökertoja
    </button>
  </div>
</div>
`;

exports[`LogEntries should render with timestamp list of over 10 entries, expanding 10 timestamps at a time 2`] = `
<div
  class="LogEntries__Container-sc-ufvf4x-0 jZPGBf"
>
  <div
    class="LogEntries__TopRow-sc-ufvf4x-1 bWQZsE"
  >
    <button
      aria-pressed="true"
      class="ButtonSmall__TextButton-sc-r8zxw8-0 jXNmmu"
    >
      Piilota käyttökerrat
    </button>
    <b
      class="typography__Bold-sc-1yq3b4j-6 woqnG"
    >
      Näytetään käyttökerrat 1–15 / 15
    </b>
  </div>
  <table
    class="DateList__DateTable-sc-9hn0em-0 jxAiqi"
  >
    <tbody>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
      <tr>
        <td>
          19.9.2018 12.05
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
